--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,23 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-Regular-webfont.eot');
-    src: url('Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-Regular-webfont.woff') format('woff'),
-         url('Roboto-Regular-webfont.ttf') format('truetype'),
-         url('Roboto-Regular-webfont.svg#RobotoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'Roboto-Regular';
+    src: url(/fonts/roboto/Roboto-Regular.ttf);
 }
 @font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-Bold-webfont.eot');
-    src: url('Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-Bold-webfont.woff') format('woff'),
-         url('Roboto-Bold-webfont.ttf') format('truetype'),
-         url('Roboto-Bold-webfont.svg#RobotoBold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+    font-family: 'Roboto-Bold';
+    src: url(/fonts/roboto/Roboto-Bold.ttf);
 }
 @font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-Light-webfont.eot');
-    src: url('Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-Light-webfont.woff') format('woff'),
-         url('Roboto-Light-webfont.ttf') format('truetype'),
-         url('Roboto-Light-webfont.svg#RobotoLight') format('svg');
-    font-weight: 100;
-    font-style: normal;
+    font-family: 'Roboto-Light';
+    src: url(/fonts/roboto/Roboto-Light.ttf);
 }
- 
 @font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-Medium-webfont.eot');
-    src: url('Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-Medium-webfont.woff') format('woff'),
-         url('Roboto-Medium-webfont.ttf') format('truetype'),
-         url('Roboto-Medium-webfont.svg#RobotoMedium') format('svg');
-    font-weight: 300;
-    font-style: normal;
+    font-family: 'Roboto-LightItalic';
+    src: url(/fonts/roboto/Roboto-LightItalic.ttf);
 }
-
-
+@font-face {
+    font-family: 'Roboto-Medium';
+    src: url(/fonts/roboto/Roboto-Medium.ttf);
+}
 /* Header */
 *{
     background-color: #1F2937;
@@ -71,6 +48,7 @@
     position: relative;
 }
 #navbar li a{
+    font-family: 'Roboto-Regular';
     text-decoration: none;
     font-size: 18px;
     font-weight: 600;
@@ -81,7 +59,6 @@
 #navbar li a.active {
     color: #088178;
 }
-
 #navbar li a.active::after,
 #navbar li a:hover::after{
     content: "";
@@ -164,15 +141,17 @@
     border-right: none;
 }
 #cart table thead td{
+    font-family: 'Roboto-Regular';
     font-weight: 700;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 18px;
     padding: 18px 0;
 }
 #cart table tbody tr td{
     padding-top: 15px;
 }
 #cart table tbody td{
+    font-family: 'Roboto-Light';
     font-size: 13px;
 }
 #cart-add{
