--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
     height: auto;
 }
 /* ----- End Cart Header ------ */
-/* --------Cart Page------- */
+/* --------Cart-Page------- */
 #cart {
     overflow-x: auto;
 }
