--- a/css/customs-style.css
+++ b/css/customs-style.css
@@ -16,7 +16,7 @@ main {
 }
 
 .cards-container {
-  max-width: 95%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
