--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,22 @@
 @font-face {
     font-family: 'Roboto-Regular';
-    src: url(/fonts/roboto/Roboto-Regular.ttf);
+    src: url(../fonts/roboto/Roboto-Regular.ttf);
 }
 @font-face {
     font-family: 'Roboto-Bold';
-    src: url(/fonts/roboto/Roboto-Bold.ttf);
+    src: url(../fonts/roboto/Roboto-Bold.ttf);
 }
 @font-face {
     font-family: 'Roboto-Light';
-    src: url(/fonts/roboto/Roboto-Light.ttf);
+    src: url(../fonts/roboto/Roboto-Light.ttf);
 }
 @font-face {
     font-family: 'Roboto-LightItalic';
-    src: url(/fonts/roboto/Roboto-LightItalic.ttf);
+    src: url(../fonts/roboto/Roboto-LightItalic.ttf);
 }
 @font-face {
     font-family: 'Roboto-Medium';
-    src: url(/fonts/roboto/Roboto-Medium.ttf);
+    src: url(../fonts/roboto/Roboto-Medium.ttf);
 }
 /* Header */
 *{
