--- a/css/style.css
+++ b/css/style.css
@@ -1,238 +1,348 @@
 header {
-  background-color: #e5e7eb;
-  color: #1f2937;
-  text-size-adjust: 36px;
-}
-
-.hero-section {
-  background-color: #1f2937;
-  color: #f9faf8;
-  text-size-adjust: 48px;
-}
-
-.quote-section {
-  background-color: #e5e7eb;
-  color: #1f2937;
-  text-size-adjust: 36px;
-}
-
-body {
-  background-color: #1f2937;
-}
-
-footer {
-  background-color: #1f2937;
-  color: #f9faf8;
-  text-size-adjust: 48px;
-}
-=======
-@font-face {
-    font-family: 'Roboto-Regular';
-    src: url(/fonts/roboto/Roboto-Regular.ttf);
-}
-@font-face {
-    font-family: 'Roboto-Bold';
-    src: url(/fonts/roboto/Roboto-Bold.ttf);
-}
-@font-face {
-    font-family: 'Roboto-Light';
-    src: url(/fonts/roboto/Roboto-Light.ttf);
-}
-@font-face {
-    font-family: 'Roboto-LightItalic';
-    src: url(/fonts/roboto/Roboto-LightItalic.ttf);
-}
-@font-face {
-    font-family: 'Roboto-Medium';
-    src: url(/fonts/roboto/Roboto-Medium.ttf);
-}
-/* Header */
-*{
-    background-color: #1F2937;
-}
-#header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background: #1F2937;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
-}
-.section-p1 {
-    padding: 40px 80px;
-}
-#navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
-}
-#navbar li a{
-    font-family: 'Roboto-Regular';
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 600;
-    color: #E5E7EB;
-    transform: 0.3s ease;
-}
-#navbar li a:hover,
-#navbar li a.active {
-    color: #088178;
-}
-#navbar li a.active::after,
-#navbar li a:hover::after{
-    content: "";
-    width: 30%;
-    height: 2px;
-    background: #088178;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-}
-/* ----- End Header ------ */
-
-/* Home Page */
-.hero-section {
-    color: white;
-    width: 45%;
-}
-
-.hero-section strong {
-    color: #CA68F9;
-}
-
-#hero-image1 {
-    height: auto;
-    width: 45%;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-}
-
-#hero-image2 {
-    
-}
-
-#shop-button {
-    background-color: #CA68F9;
-    color: white;
-    border: 2px solid #CA68F9;
-    border-width: 15px;
-    border-radius: 5px;
-    font-size: large;
-    margin-left: 25%;
-    text-decoration: none;
-}
-
-#shop-button:hover {
-    color: black;
-}
-
-/* Custom Cakes Page*/
-hero-image2 {
-
-}
-
-
-/* Cart Page*/
-/* Cart Header  */
-.cart-header{
-    background-image: url("../images/cartimage.jpg");
-    width: 100%;
-    height: 40vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top 20% right 0;
-    padding: 14px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-}
-.section-p1 {
-    padding: 40px 80px;
-    color: #E5E7EB;
-}
-.cart-header p{
-    color: #F9FAF8;
-}
-#cart-header {
-    display: flex;
-    align-items: center;
-}
-#cart-header img{
-    width: 50%;
-    height: auto;
-}
-/* ----- End Cart Header ------ */
-/* --------Cart-Page------- */
-#cart {
-    overflow-x: auto;
-}
-#cart table{
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-    white-space: nowrap;
-}
-#cart table img{
-    width: 70px;
-}
-#cart table td:nth-child(1){
-    width: 100px;
-    text-align: center;
-}
-#cart table td:nth-child(2){
-    width: 150px;
-    text-align: center;
-}
-#cart table td:nth-child(3){
-    width: 250px;
-    text-align: center;
-}
-#cart table td:nth-child(4),
-#cart table td:nth-child(5),
-#cart table td:nth-child(6){
-    width: 150px;
-    text-align: center;
-}
-#cart table td:nth-child(5) input{
-    width: 70px;
-    padding: 10px 5px 10px 15px;
-}
-#cart table thead{
-    border: 1px solid #e2e9e1;
-    border-left: none;
-    border-right: none;
-}
-#cart table thead td{
-    font-family: 'Roboto-Regular';
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 18px;
-    padding: 18px 0;
-}
-#cart table tbody tr td{
-    padding-top: 15px;
-}
-#cart table tbody td{
-    font-family: 'Roboto-Light';
-    font-size: 13px;
-}
-#cart-add{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-#cart input {
-    color: #E5E7EB;
-}
-/* ----- End Cart-Page ------ */
+    background-color: #e5e7eb;
+    color: #1f2937;
+    text-size-adjust: 36px;
+  }
+  
+  .hero-section {
+    background-color: #1f2937;
+    color: #f9faf8;
+    text-size-adjust: 48px;
+  }
+  
+  .quote-section {
+    background-color: #e5e7eb;
+    color: #1f2937;
+    text-size-adjust: 36px;
+  }
+  
+  body {
+    background-color: #1f2937;
+  }
+  
+  footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    text-size-adjust: 48px;
+  }
+  =======
+  @font-face {
+      font-family: 'Roboto-Regular';
+      src: url(/fonts/roboto/Roboto-Regular.ttf);
+  }
+  @font-face {
+      font-family: 'Roboto-Bold';
+      src: url(/fonts/roboto/Roboto-Bold.ttf);
+  }
+  @font-face {
+      font-family: 'Roboto-Light';
+      src: url(/fonts/roboto/Roboto-Light.ttf);
+  }
+  @font-face {
+      font-family: 'Roboto-LightItalic';
+      src: url(/fonts/roboto/Roboto-LightItalic.ttf);
+  }
+  @font-face {
+      font-family: 'Roboto-Medium';
+      src: url(/fonts/roboto/Roboto-Medium.ttf);
+  }
+  /* Header */
+  *{
+      background-color: #1F2937;
+  }
+  #header{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 20px 80px;
+      background: #1F2937;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
+      z-index: 999;
+      position: sticky;
+      top: 0;
+      left: 0;
+  }
+  .section-p1 {
+      padding: 40px 80px;
+  }
+  #navbar{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+  #navbar li {
+      list-style: none;
+      padding: 0 20px;
+      position: relative;
+  }
+  #navbar li a{
+      font-family: 'Roboto-Regular';
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: 600;
+      color: #E5E7EB;
+      transform: 0.3s ease;
+  }
+  #navbar li a:hover,
+  #navbar li a.active {
+      color: #088178;
+  }
+  #navbar li a.active::after,
+  #navbar li a:hover::after{
+      content: "";
+      width: 30%;
+      height: 2px;
+      background: #088178;
+      position: absolute;
+      bottom: -4px;
+      left: 20px;
+  }
+  /* ----- End Header ------ */
+  
+  /* Home Page */
+  .hero-section {
+      color: white;
+      width: 45%;
+  }
+  
+  .hero-section strong {
+      color: #CA68F9;
+  }
+  
+  #hero-image1 {
+      height: auto;
+      width: 45%;
+      position: absolute;
+      top: 25%;
+      left: 50%;
+  }
+  
+  #hero-image2 {
+      
+  }
+  
+  #shop-button {
+      background-color: #CA68F9;
+      color: white;
+      border: 2px solid #CA68F9;
+      border-width: 15px;
+      border-radius: 5px;
+      font-size: large;
+      margin-left: 25%;
+      text-decoration: none;
+  }
+  
+  #shop-button:hover {
+      color: black;
+  }
+  
+  /* Custom Cakes Page*/
+  hero-image2 {
+  
+  }
+  
+  
+  /* Cart Page*/
+  /* Cart Header  */
+  .cart-header{
+      background-image: url("../images/cartimage.jpg");
+      width: 100%;
+      height: 40vh;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: top 20% right 0;
+      padding: 14px;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      flex-direction: column;
+  }
+  .section-p1 {
+      padding: 40px 80px;
+      color: #E5E7EB;
+  }
+  .cart-header p{
+      color: #F9FAF8;
+  }
+  #cart-header {
+      display: flex;
+      align-items: center;
+  }
+  #cart-header img{
+      width: 50%;
+      height: auto;
+  }
+  /* ----- End Cart Header ------ */
+  /* --------Cart-Page------- */
+  #cart {
+      overflow-x: auto;
+  }
+  #cart table{
+      width: 100%;
+      border-collapse: collapse;
+      table-layout: fixed;
+      white-space: nowrap;
+  }
+  #cart table img{
+      width: 70px;
+  }
+  #cart table td:nth-child(1){
+      width: 100px;
+      text-align: center;
+  }
+  #cart table td:nth-child(2){
+      width: 150px;
+      text-align: center;
+  }
+  #cart table td:nth-child(3){
+      width: 250px;
+      text-align: center;
+  }
+  #cart table td:nth-child(4),
+  #cart table td:nth-child(5),
+  #cart table td:nth-child(6){
+      width: 150px;
+      text-align: center;
+  }
+  #cart table td:nth-child(5) input{
+      width: 70px;
+      padding: 10px 5px 10px 15px;
+  }
+  #cart table thead{
+      border: 1px solid #e2e9e1;
+      border-left: none;
+      border-right: none;
+  }
+  #cart table thead td{
+      font-family: 'Roboto-Regular';
+      font-weight: 700;
+      text-transform: uppercase;
+      font-size: 18px;
+      padding: 18px 0;
+  }
+  #cart table tbody tr td{
+      padding-top: 15px;
+  }
+  #cart table tbody td{
+      font-family: 'Roboto-Light';
+      font-size: 13px;
+  }
+  #cart-add{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+  }
+  #cart input {
+      color: #E5E7EB;
+  }
+  /* ----- End Cart-Page ------ */
+  
+  .quote {
+      display: flex;
+      flex-direction: column;
+      justify-content: left;
+      width: auto;
+      margin: 20px 40px;
+      padding: 35px;
+      background: #E5E7EB;
+      font-family: 'Roboto-LightItalic';
+  }
+  .quote-text {
+      font-style: italic;
+      font-weight: lighter;
+      background-color: #E5E7EB;
+      color: #1F2937;
+      font-size: 36px;
+      box-sizing: border-box;
+      text-align: left;
+      font-family: 'Roboto-LightItalic';
+  }
+  .quote-text2 {
+      font-style: italic;
+      font-weight: lighter;
+      background-color: #E5E7EB;
+      color: #1F2937;
+      font-size: 36px;
+      box-sizing: border-box;
+      text-align: right;
+      font-family: 'Roboto-LightItalic';
+  }
+  .footer-container {
+      background-color: #1F2937;
+      text-size-adjust: 48px;
+  }
+  .footer {
+      width: 100%;
+      padding-top: 40px;
+      padding-bottom: 20px;
+      color: #F9FAF8;
+  }
+  .footer .footer-top {
+      width: 80%;
+      height: 40%;
+      display: flex;
+      justify-content: space-between;
+      margin: 0 auto;
+  }
+  .footer-heading {
+      display: flex;
+      flex-direction: column;
+  }
+  .footer-heading a {
+      color: #fff;
+      text-decoration: none;
+      margin-bottom: 20px;
+  }
+  img {
+      width: 100px;
+      height: auto;
+  }
+  .footer-bottom {
+      text-align: center;
+      color: #fff;
+  }
+  .footer .footer-1 {
+      height: 100%;
+      gap: 20px;
+  }
+  .footer .footer-1 h2 {
+      margin-bottom: 10px;
+  }
+  .footer .footer-1 p {
+      margin-bottom: 5px;
+  }
+  .footer .footer-4,
+  .footer .footer-4 h2,
+  .footer .footer-4 ul.social-media {
+      padding-left: 0;
+  }
+  .footer .footer-4 ul.social-media li {
+      display: inline-block;
+      list-style-type: none;
+      padding: 5px;
+  }
+  .footer .footer-4 ul.social-media li i {
+      display: contents;
+  }
+  .footer .footer-2 ul,
+  .footer .footer-3 ul {
+      padding: 0;
+  }
+  .footer .footer-2 ul li,
+  .footer .footer-3 ul li {
+      list-style-type: none;
+      margin-top: 10px;
+      margin-bottom: 10px;
+  }
+  .footer .footer-3 {
+      height: 100%;
+      gap: 20px;
+  }
+  .footer .footer-3 .payment-gateway-container h3 {
+      margin-bottom: 10px;
+  }
+  .footer .footer-3 .payment-gateway-container img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+  }
