--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,71 @@ header {
   body {
     background-color: #1f2937;
   }
-  
+
+  #feature {
+    margin-top: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#feature .fe-box{
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #CCE7D0;
+    border-radius: 10px;
+    margin: 15px 0;
+    background-color: #9083DE;
+}
+#feature .fe-box:nth-child(2){
+    background-color: #699FF1;
+}
+#feature .fe-box:nth-child(3){
+    background-color: #98AF3D;
+}
+#feature .fe-box:nth-child(4) {
+    background-color: #4556EE;
+}
+#feature .fe-box:hover{
+    box-shadow: 10px 10px 54px rgba(176, 172, 243, 0.1);
+    transform: translateY(-2px);
+}
+#feature .fe-box img {
+    width: 90%;
+    margin-bottom: 10px;
+    border-radius: 6px;
+}
+#feature .fe-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #68EA80;
+}
+#feature .fe-box:nth-child(2) h6{
+    background-color: #E19BEA;
+}
+#feature .fe-box:nth-child(3) h6{
+    background-color: #74ACE8;
+}
+ #feature .fe-box:nth-child(4) h6{
+    background-color: #E5F092;
+}
+.section-p1{
+    padding: 20px 80px;
+    color: #E5E7EB;
+}
+
   footer {
     background-color: #1f2937;
     color: #f9faf8;
     text-size-adjust: 48px;
   }
-  =======
+
+
   @font-face {
       font-family: 'Roboto-Regular';
       src: url(/fonts/roboto/Roboto-Regular.ttf);
