--- a/css/customs-style.css
+++ b/css/customs-style.css
@@ -98,3 +98,130 @@ main {
   background-color: white;
   color: #0e6f34;
 }
+
+  /* Header */
+#header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 80px;
+    background: #1F2937;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.section-p1 {
+    padding: 40px 80px;
+}
+#navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#navbar li {
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+}
+#navbar li a{
+    font-family: 'Roboto-Regular';
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #E5E7EB;
+    transform: 0.3s ease;
+}
+#navbar li a:hover,
+#navbar li a.active {
+    color: #088178;
+}
+#navbar li a.active::after,
+#navbar li a:hover::after{
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #088178;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+
+/* Footer */
+
+.footer-container {
+  background-color: #1F2937;
+  text-size-adjust: 48px;
+}
+.footer {
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  color: #F9FAF8;
+}
+.footer .footer-top {
+  width: 80%;
+  height: 40%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.footer-heading {
+  display: flex;
+  flex-direction: column;
+}
+.footer-heading a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+.footer-bottom {
+  text-align: center;
+  color: #fff;
+}
+.footer .footer-1 {
+  height: 100%;
+  gap: 20px;
+}
+.footer .footer-1 h2 {
+  margin-bottom: 10px;
+}
+.footer .footer-1 p {
+  margin-bottom: 5px;
+}
+.footer .footer-4,
+.footer .footer-4 h2,
+.footer .footer-4 ul.social-media {
+  padding-left: 0;
+}
+.footer .footer-4 ul.social-media li {
+  display: inline-block;
+  list-style-type: none;
+  padding: 5px;
+}
+.footer .footer-4 ul.social-media li i {
+  display: contents;
+}
+.footer .footer-2 ul,
+.footer .footer-3 ul {
+  padding: 0;
+}
+.footer .footer-2 ul li,
+.footer .footer-3 ul li {
+  list-style-type: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.footer .footer-3 {
+  height: 100%;
+  gap: 20px;
+}
+.footer .footer-3 .payment-gateway-container h3 {
+  margin-bottom: 10px;
+}
+.footer .footer-3 .payment-gateway-container img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
